--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,13 @@ html {
 
 body {
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "lato", sans-serif;
   line-height: 1.6;
   font-weight: 400;
-  background-color: rgba(0, 0, 0, 0.95);
-  min-height: 100vh; }
+  min-height: 100vh;
+  background-image: linear-gradient(to right, rgba(0, 4, 40, 0.6), rgba(0, 78, 146, 0.71)), url(../img/hills7.jpg);
+  background-size: cover;
+  background-position: center; }
 
 ::selection {
   background-color: #f2f2f2;
@@ -59,7 +61,8 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; }
+  justify-content: space-between;
+  z-index: 10; }
 
 /**********navigation****************/
 .navigation {
@@ -76,7 +79,7 @@ body {
     padding: 1rem 2rem;
     font-size: 1.8rem;
     font-weight: 300;
-    color: #808080;
+    color: #f2f2f2;
     text-decoration: none;
     display: inline-block;
     border-radius: 2rem;
@@ -87,7 +90,7 @@ body {
       background-position: 100%;
       color: #4d4d4d;
       transform: scale(1.1);
-      box-shadow: 0 1rem 3rem rgba(128, 128, 128, 0.3); }
+      box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.3); }
     .navigation__link:link:active, .navigation__link:visited:active {
       transform: translateY(5px); }
   .navigation:hover .navigation__link:not(:hover) {
@@ -98,34 +101,30 @@ body {
   flex: 0 0 50%;
   align-self: center; }
   .text-box__text {
-    color: #4d4d4d;
     display: flex;
     flex-direction: column;
-    text-align: center;
     justify-content: center;
     height: 50%;
     transition: all .3s; }
     .text-box__text--main {
-      font-family: "latto", sans-serif;
       font-size: 2rem;
       font-weight: 300;
       text-transform: uppercase;
       letter-spacing: 2rem;
       text-align: center;
       animation: moveInLeft 4s;
-      background-image: linear-gradient(to bottom, #f2f2f2, #000);
+      background-image: linear-gradient(to bottom, #f2f2f2, #808080);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent; }
     .text-box__text--sub {
-      font-family: "latto", sans-serif;
       font-size: 1.8rem;
-      font-weight: 300;
+      font-weight: 700;
       text-transform: uppercase;
       letter-spacing: 2rem;
       text-align: center;
       animation: moveInRight 3s;
-      background-image: linear-gradient(to top, #f2f2f2, #000);
+      background-image: linear-gradient(to top, #f2f2f2, #808080);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent; }
@@ -139,7 +138,7 @@ body {
   .text-box__location-icon {
     width: 3rem;
     height: 3rem;
-    fill: #4d4d4d;
+    fill: #95A5A6;
     border-radius: 50%;
     margin-bottom: 2rem;
     transition: all 1s;
@@ -147,10 +146,10 @@ body {
   .text-box__location-text {
     font-size: 2rem;
     text-transform: capitalize;
-    color: #808080; }
+    color: #bfbfbf; }
     .text-box__location-text:hover {
-      transform: scale(1.1) skewY(-2deg);
-      box-shadow: 0 1rem 2rem rgba(128, 128, 128, 0.4); }
+      transform: scale(1.1);
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4); }
 
 /**********social****************/
 .social__list {
@@ -166,7 +165,7 @@ body {
   font-size: 1.5rem;
   text-decoration: none;
   color: transparent;
-  background-image: linear-gradient(to right, #f2f2f2, #000);
+  background-image: linear-gradient(to right, #f2f2f2, #bfbfbf);
   -webkit-background-clip: text;
   background-clip: text;
   display: flex;
@@ -186,7 +185,7 @@ body {
 .social__icon {
   height: 2rem;
   width: 2rem;
-  fill: #000033; }
+  fill: #95A5A6; }
 
 .social__text {
   margin-top: .7rem; }
