--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -4,14 +4,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
+    z-index: 10;
 }
 
 
 
 /**********navigation****************/
 .navigation{
-    //background-color: aqua;
     color: white;
 
     &__list{
@@ -19,6 +18,7 @@
         display: flex;
         justify-content: flex-end;
         padding: 3rem;
+
     }
     &__item{
         margin-right: 10px;
@@ -30,7 +30,7 @@
         padding: 1rem 2rem;
         font-size: 1.8rem;
         font-weight: 300;
-        color: $color-white-dark;
+        color: $color-white;
         text-decoration: none;
         display: inline-block;
         border-radius: 2rem;
@@ -42,7 +42,7 @@
             background-position: 100%;
             color: $color-primary;
             transform: scale(1.1);
-            box-shadow: 0 1rem 3rem rgba($color-white-dark, .3);
+            box-shadow: 0 1rem 3rem rgba($color-black, .3);
         }
 
         &:active{
@@ -63,17 +63,15 @@
     align-self: center;
 
     &__text{
-        color: $color-primary;
+        //color: $color-primary;
         display: flex;
         flex-direction: column;
-        text-align: center;
+        //text-align: center;
         justify-content: center;
-        //background-color: grey;
         height: 50%; 
         transition: all .3s;
 
         &--main{      
-            font-family: "latto", sans-serif;
             font-size: 2rem;
             font-weight: 300;
             text-transform: uppercase;
@@ -81,22 +79,21 @@
             text-align: center;      
             animation: moveInLeft 4s;
 
-            background-image: linear-gradient(to bottom, $color-white, $color-black);
+            background-image: linear-gradient(to bottom, $color-white, $color-white-dark);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
         }
 
         &--sub{   
-            font-family: "latto", sans-serif;
             font-size: 1.8rem;
-            font-weight: 300;
+            font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 2rem;
             text-align: center;
             animation: moveInRight 3s;
 
-            background-image: linear-gradient(to top, $color-white, $color-black);
+            background-image: linear-gradient(to top, $color-white, $color-white-dark);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
@@ -116,7 +113,7 @@
     &__location-icon{
         width: 3rem;
         height: 3rem;
-        fill: $color-primary;
+        fill: $color-greyish;
         border-radius: 50%; 
         margin-bottom: 2rem;
 
@@ -127,11 +124,11 @@
     &__location-text{
         font-size: 2rem;
         text-transform: capitalize;
-        color: $color-white-dark;
+        color:$color-primary-light;
 
         &:hover{
-            transform: scale(1.1) skewY(-2deg);
-            box-shadow: 0 1rem 2rem rgba($color-white-dark, .4);
+            transform: scale(1.1);
+            box-shadow: 0 1rem 2rem rgba($color-black, .4);
 
         }
     }
@@ -158,7 +155,7 @@
         font-size: 1.5rem;
         text-decoration: none;
         color: transparent;
-        background-image: linear-gradient(to right, $color-white, $color-black);
+        background-image: linear-gradient(to right, $color-white, $color-primary-light);
         -webkit-background-clip: text;
         background-clip: text;
         display: flex;
@@ -184,7 +181,7 @@
     &__icon{
         height: 2rem;
         width: 2rem;
-        fill: $color-black-light;
+        fill: $color-greyish;
     }
 
     &__text{
