--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -31,6 +31,16 @@ $color-frosty2:#004e92;
 
 html{
     font-size: 62.5%;
+    
+    @include respond(big-desktop){
+        font-size: 62.5%;
+    }
+    @include respond(tab-land){
+        font-size: 56.25%;
+    }
+    @include respond(tab-port){
+        font-size: 50%;
+    }
 }
 
 body{
@@ -39,7 +49,7 @@ body{
     line-height: 1.6;
     font-weight: 400;
     min-height: 100vh;
-    background-image: linear-gradient( to right, rgba($color-frosty1, .8), rgba($color-frosty2, .9)),
+    background-image: linear-gradient( to right, rgba($color-frosty1, .76), rgba($color-frosty2, .88)),
                         url(../img/hills7.jpg);                 
     background-size: cover;
     background-position: center;
