--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,16 +1,38 @@
-/////////////////////MEDIA QUERY MANAGER//////
-///1em = 16px
 
-@mixin respond($breakpoint){
+// MEDIA QUERY MANAGER
+/*
+0 - 600 px:     Phone
+600 - 900px:    Tablet portrait
+900 - 1200px:   Tablet landscape
+1200 - 1800px:  Normal desktop that our styles apply to
+1800px +"       Big desktops
+*/
+
+
+
+/////////// MEDIA QUERY MANAGER  ///////
+
+@mixin respond($breakpoint) {
+
     @if $breakpoint == phone{
-        @media only screen and (max-width: 37.5em){ @content};
+        @media screen and (max-width:37.5em) { @content };
     }
 
     @if $breakpoint == tab-port{
-        @media only screen and (max-width: 56.25em){ @content};
+        @media only screen and (max-width:56.25em){ @content };
     }
 
     @if $breakpoint == tab-land{
-        @media only screen and (max-width: 75em){ @content};
+        @media only screen and (max-width: 75em){ @content };
     }
+
+    @if $breakpoint ==big-desktop{
+        @media only screen and (max-width: 175em){ @content };
+    }
+    
 }
+
+/*  @mixin  respond-phone {
+    @media only screen and (max-width:37.5em) { @content };
+}
+*/
