--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 
 html {
   font-size: 62.5%; }
-  @media only screen and (max-width: 175em) {
+  @media only screen and (min-width: 175em) {
     html {
       font-size: 62.5%; } }
   @media only screen and (max-width: 75em) {
@@ -76,8 +76,118 @@ body {
     opacity: 1;
     transform: translateX(0); } }
 
+.content {
+  display: flex;
+  width: 100%;
+  height: 90vh;
+  flex-wrap: wrap;
+  padding: 1rem; }
+  .content__header {
+    flex: 0 0 100%; }
+  .content__heading {
+    font-weight: lighter;
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 5rem;
+    color: #99CCFF;
+    letter-spacing: 1.2; }
+    @media screen and (max-width: 37.5em) {
+      .content__heading {
+        font-size: 3rem; } }
+  .content__about {
+    width: 100%;
+    display: flex;
+    padding: 2rem;
+    flex: 0 0 100%; }
+    @media only screen and (max-width: 75em) {
+      .content__about {
+        flex-direction: column; } }
+  .content__image {
+    float: left;
+    align-self: center;
+    -webkit-clip-path: circle(35% at 52% 50%);
+    clip-path: circle(35% at 52% 50%);
+    overflow: hidden; }
+    @media only screen and (min-width: 75em) {
+      .content__image {
+        flex: 1 0 50%; } }
+    @media only screen and (max-width: 75em) {
+      .content__image {
+        -webkit-clip-path: circle(35% at 50% 48%);
+        clip-path: circle(35% at 50% 48%); } }
+    @media screen and (max-width: 37.5em) {
+      .content__image {
+        -webkit-clip-path: circle(38% at 50% 50%);
+        clip-path: circle(38% at 50% 50%); } }
+  .content__img {
+    opacity: .9;
+    width: 100%;
+    height: auto;
+    shape-outside: circle(39% at 50% 50%); }
+    @media only screen and (max-width: 75em) {
+      .content__img {
+        transform: translateX(-2rem); } }
+  .content__text {
+    width: 96%;
+    background-color: rgba(0, 51, 51, 0.3);
+    font-size: 2rem;
+    line-height: 1.5;
+    border-radius: .5rem;
+    color: #99CCFF;
+    padding: 1rem 4rem;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5);
+    text-align: center;
+    margin: 0 auto; }
+    @media only screen and (min-width: 175em) {
+      .content__text {
+        flex: 1 0 50%; } }
+    @media screen and (max-width: 37.5em) {
+      .content__text {
+        margin-top: 2rem; } }
+
+.btn {
+  margin-top: 5rem;
+  align-self: flex-end;
+  position: relative; }
+  .btn__checkout {
+    padding: 1.5rem;
+    border-radius: 50rem;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    border: none;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+    color: #003300; }
+    .btn__checkout::after {
+      content: "";
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: #f2f2f2;
+      border-radius: 50rem;
+      transition: all .4s; }
+    .btn__checkout:hover {
+      transform: translateY(-0.3rem);
+      box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.5); }
+      .btn__checkout:hover::after {
+        transform: scale(1.5);
+        opacity: 0; }
+    .btn__checkout:focus, .btn__checkout:active {
+      outline: none;
+      transform: translateY(0.1rem);
+      box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.5); }
+  @media only screen and (max-width: 75em) {
+    .btn {
+      align-self: center; } }
+
 .container {
-  background-color: transparent;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -104,9 +214,12 @@ body {
     text-decoration: none;
     display: inline-block;
     border-radius: 2rem;
-    transition: all .5s;
+    transition: all .4s;
     background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #f2f2f2 50%);
     background-size: 230%; }
+    @media only screen and (min-width: 175em) {
+      .navigation__link:link, .navigation__link:visited {
+        font-size: 4rem; } }
     .navigation__link:link:hover, .navigation__link:visited:hover {
       background-position: 100%;
       color: #4d4d4d;
@@ -137,6 +250,7 @@ body {
       letter-spacing: 2rem;
       text-align: center;
       animation: moveInLeft 4s;
+      margin-bottom: .5rem;
       background-image: linear-gradient(to bottom, #f2f2f2, #808080);
       -webkit-background-clip: text;
       background-clip: text;
@@ -156,6 +270,7 @@ body {
       letter-spacing: 2rem;
       text-align: center;
       animation: moveInRight 3s;
+      margin-top: .5rem;
       background-image: linear-gradient(to top, #f2f2f2, #808080);
       -webkit-background-clip: text;
       background-clip: text;
@@ -217,6 +332,9 @@ body {
   align-items: center;
   transition: all .4s;
   border-radius: .5rem; }
+  @media screen and (max-width: 37.5em) {
+    .social__link:link, .social__link:visited {
+      font-size: 1.3rem; } }
   .social__link:link:hover, .social__link:visited:hover {
     transform: scale(1.1) translateY(-2px);
     box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.3); }
