--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,10 +1,8 @@
 .container{
-    background-color: transparent;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-   // z-index: 10;
 }
 
 
@@ -38,9 +36,13 @@
         text-decoration: none;
         display: inline-block;
         border-radius: 2rem;
-        transition: all .5s;
+        transition: all .4s;
         background-image: linear-gradient(120deg, transparent 0%,   transparent 50%, $color-white 50%);
         background-size: 230%;
+
+        @include respond(big-desktop){
+            font-size: 4rem;
+        }
 
         &:hover{
             background-position: 100%;
@@ -86,7 +88,7 @@
             letter-spacing: 2rem;
             text-align: center;      
             animation: moveInLeft 4s;
-
+            margin-bottom: .5rem;
             background-image: linear-gradient(to bottom, $color-white, $color-white-dark);
             -webkit-background-clip: text;
             background-clip: text;
@@ -109,7 +111,7 @@
             letter-spacing: 2rem;
             text-align: center;
             animation: moveInRight 3s;
-
+            margin-top: .5rem;
             background-image: linear-gradient(to top, $color-white, $color-white-dark);
             -webkit-background-clip: text;
             background-clip: text;
@@ -195,6 +197,10 @@
         align-items: center;
         transition: all .4s;
         border-radius: .5rem;
+
+        @include respond(phone){
+            font-size: 1.3rem;
+        }
 
         &:hover{
             transform: scale(1.1) translateY(-2px);
