--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -1,7 +1,13 @@
+.cont{
+    @include respond(phone){
+        height: max-content;
+    }
+}
 .project{
     display: flex;
     flex: 0 0 100%;
-    height: 100vh;
+    //height: 100vh;
+    height: auto;
     padding: 1rem 2rem;
     justify-content: space-around;
 
@@ -32,7 +38,7 @@
         border-radius: 1rem;
         transition: all .3s;
         background-color: rgba(#003333, .4);
-        box-shadow: 0 .5rem 1.5rem rgba($color-black, .2);
+        box-shadow: 0 .5rem 1.5rem rgba($color-black, .9);
         
         &:not(:last-child){
             margin-bottom: 2rem;
@@ -60,7 +66,11 @@
     &__skills-text{
         color: greenyellow;
         margin-bottom: .8rem;
-        font-size: 1rem;
+        font-size: 1.4rem;
+
+        @include respond(tab-port){
+            font-size: 1rem;
+        }
     }
 
     &__outer-div{
@@ -94,8 +104,9 @@
         margin-top: 2rem;
         padding: 1rem;
         background-color: rgba(#003333, .5);
-        position: relative;
-        box-shadow: 0 2rem 2.5rem rgba($color-black, .2);
+        //position: relative;
+        box-shadow: 0 1rem 2rem rgba($color-black, .7);
+        height: auto;
 
         &:not(:last-child){
             margin-bottom: 1.5rem;
@@ -109,7 +120,7 @@
             flex-wrap: nowrap;
             transform: skewX(0deg);
             width:102%;
-            box-shadow: 0 1rem 1.5rem rgba($color-black, .2);
+            box-shadow: 0 1rem 1.5rem rgba($color-black, .7);
             border-radius: .6rem;
 
         }
@@ -149,6 +160,7 @@
 
     &__heading{
         font-size: 1.8rem;
+        //font-size: 3rem;
         text-transform: uppercase;
         //color: rgba(#023305, 1);
         //color: #99CCFF;
@@ -156,6 +168,9 @@
         font-weight: 300;
         margin-bottom: 2rem;
 
+        // @include respond(tab-land){
+        //     font-size: 2rem;
+        // }
         @include respond(phone){
             margin-bottom: .8rem;
         }
@@ -163,9 +178,14 @@
 
     &__text{
         font-size: 1.5rem;
+        //font-size: 1.6rem;
         color: #99CCFF;
         backface-visibility: hidden;
+        line-height: 1.3;
 
+        // @include respond(tab-land){
+        //     font-size: 1.5rem;
+        // }
         @include respond(phone){
             display: flex;
             flex-direction: column;
@@ -210,6 +230,7 @@
        color: $color-white;
        transition: all .3s;
        position: relative;
+      // letter-spacing: .15rem;
 
        &:hover{
         transform: translateY(-.2rem);
