--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -177,6 +177,7 @@
     }
 
     &__text{
+        font-family: sans-serif;
         font-size: 1.5rem;
         //font-size: 1.6rem;
         color: #99CCFF;
